/*
 * @begin:license
 *
 * Copyright (c) 2015-2019, Benjamin Niemann <pink@odahoda.de>
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 2 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License along
 * with this program; if not, write to the Free Software Foundation, Inc.,
 * 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 *
 * @end:license
 */

syntax = "proto2";

package noisicaa.pb;

message InstrumentDescription {
  required string uri = 1;

  enum Format {
    SAMPLE = 1;
    SF2 = 2;
  }
  optional Format format = 2;
  optional string path = 3;
  optional string display_name = 4;

  optional uint32 bits_per_sample = 5;
  optional uint32 num_channels = 6;
  optional uint32 sample_rate = 7;
  optional uint32 num_samples = 8;
  optional float duration = 9;
}
